# DARTassembler

./: .gitignore  Changelog  DART_env.yml  DART_env_exact.yml  DART_env_try_to_minimize.yml  README.md  TODO  conda_DART.yml  custom_install.py  dart_cli.py  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  status.txt
Bin(Old)_II/: Test_GraphMethodsComparison.py  Test_GraphReadIn.py
DART_Assembly.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
DARTassembler/: __init__.py  assemble_complexes.py  assembler.py  concat.py  configs.py  dart_cli.py  dbinfo.py  filter_ligands.py  installtest.py  ligandfilters.py  make_ligand_db_csv.py  test_installation.py
DARTassembler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
EXAMPLE/: Progress.py  Restart.py
GUI/: GUI_Assembly.py  threads_test.py
Gaussian/: Gaussian.py
Legacy_unit_test_do_not_delete/: README
MISC/: viewer.py
chemical_data/: PSE.txt
conda/: DART_env.yml  DART_env_exact_builds.yml  environment.yml
constants/: Paths.py  Periodic_Table.py  constants.py
data/: Felix_original_ligand_db_test.csv  Felix_original_ligand_db_test.pickle  ligand_db_test.csv
db_statistics/: complex_statistics.py  unique_ligand_statistics.py
dev/: Changelog  README.md  TODO
docs/: README.md  conf.py  figures_for_docs.pptx  index.html  index.rst  installation.rst  ligand_filters.rst  requirements.txt
examples/: upload_to_iochem.sh
matplotlib/: bar_plot.py  main.py  main_2.py
old__docs__old/: DART_paper_draft.txt  conf.py  index.html  index.rst
output_test/: CreateTMC.yml  (+5 more)
(+18034 files in other folders)
