[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DARTassembler"
version = "1.0.0"
description = "Simple to use package for building 3D structures of novel transition metal complexes from a large database of ligands extracted from the Cambridge Structural Database."
requires-python = ">=3.9"
authors = [
    {name = "Timo Sommer"},
    {name = "Cian Clarke"},
    {name = "Felix Kleuker"},
]

[project.urls]
homepage = "https://github.com/CCEMGroupTCD/DART"

[project.dependencies]
dependencies = [
    "ase",
    "jsonlines",
    "networkx",
    "numpy",
    "openbabel-wheel",
    "pandas",
    "pyyaml",
    "rdkit",
    "scipy",
    "scikit-learn",
    "stk",
    "sympy",
    "tqdm",
    "pysmiles",
]

[tool.setuptools.package-data]
"DARTassembler" = ["data/*.csv", "data/metalig/*.jsonlines.zip", "data/metalig/test*.jsonlines", "data/metalig/*.csv", "data/tests/test_installation/*", "data/default/*"]

[tool.setuptools.entry-points."console_scripts"]
"DARTassembler" = "DARTassembler.dart_cli:main"
